--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,26 +48,26 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-4020920240930001",
     "@dcloudio/uni-mp-weixin": "3.0.0-4020920240930001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
-    "vue": "^3.4.21",
+    "@dcloudio/uni-ui": "^1.5.5",
     "pinia": "^2.1.7",
-    "@dcloudio/uni-ui": "^1.5.5"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4020920240930001",
+    "@dcloudio/uni-automator": "^3.0.0-4020920240930001",
     "@dcloudio/uni-cli-shared": "3.0.0-4020920240930001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020920240930001",
-    "@vue/tsconfig": "^0.5.1",
-    "typescript": "^5.4.5",
-    "vite": "5.1.6",
-    "vitest": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vue/test-utils": "^2.4.6",
     "@playwright/test": "^1.44.0",
-    "jsdom": "^24.1.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
     "happy-dom": "^14.12.0",
-    "msw": "^2.3.1"
+    "jsdom": "^24.1.0",
+    "msw": "^2.3.1",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.8",
+    "vitest": "^1.6.0"
   },
   "browserslist": [
     "Android >= 4.4",
