--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,10 +25,11 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 
 # Logging
-python-json-logger==2.0.7
+loguru==0.7.2
 
 # Performance monitoring
 psutil==5.9.6
+prometheus-client==0.19.0
 
 # Development
 pytest==7.4.3
