--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 8001 ssl;
-    server_name subapi.ktatom.com;
+    server_name subapi.52ace.cn;
 
     ssl_certificate /etc/nginx/ssl/fullchain.cer;
     ssl_certificate_key /etc/nginx/ssl/cert.key;
