--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,43 +1,22 @@
-# FastAPI and web framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-
-# Database
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-aiosqlite==0.19.0
-
-# Redis and Celery
-redis==5.0.1
+aiohttp==3.12.14
+asyncpg==0.30.0
 celery==5.3.4
-
-# Authentication
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-
-# HTTP client
-httpx==0.25.2
-
-# Validation and serialization
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# Logging
-loguru==0.7.2
-
-# Performance monitoring
+fastapi==0.116.1
+httpx==0.28.1
+loguru==0.7.3
+passlib==1.7.4
+prometheus_client==0.22.1
 psutil==5.9.6
-prometheus-client==0.19.0
-
-# Development
+pydantic==2.11.7
+pydantic_settings==2.10.1
 pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-mock==3.12.0
-black==23.11.0
-isort==5.12.0
-pymysql==1.1.1
-
-# Payments
+python_jose==3.3.0
+Requests==2.32.4
+SQLAlchemy==2.0.23
+starlette==0.47.2
+uvicorn==0.35.0
 wechatpayv3==1.3.10
+redis==6.4.0
+aiosqlite==0.21.0
+pymysql==1.1.1
+asyncmy==0.2.10
